# tectonopedia-ng

./: .gitignore  docker-compose.yml  package.json
app/: app.vue
app/composables/: use-repo.ts
app/layouts/: default.vue
app/pages/: index.vue
backend/: Cargo.toml
backend/src/: lib.rs  metadata.rs
defs/cls/: template.html
defs/cls/pedia/: entries.tex
frontend/: .gitignore  README.md  nuxt.config.ts  package.json
frontend/app/assets/css/: main.css
frontend/app/components/: TexContent.vue
frontend/app/composables/: use-entry-info.ts  use-keypair.ts  use-repo-api.ts  use-repo.ts
frontend/app/layouts/: default.vue
frontend/app/pages/: index.vue
frontend/app/pages/e/: [entryName].vue
frontend/server/api/entry/: [entryName].ts
frontend/server/api/html/[docId]/: [outputName].ts
frontend/shared/types/: apis.d.ts
local/: nginx.conf
