[package]
name = "ttpedia-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = { version = "0.8.4", features = ["macros", "tracing", "ws"] }
automerge = "0.6.1"
clap = { version = "4.5.42", features = ["derive"] }
faktory = "0.13"
futures = "0.3.31"
once_cell = "^1"
samod-core = { path = "../../samod/samod-core" }
samod = { path = "../../samod/samod", features = [
    "axum",
    "tokio",
    "tungstenite",
] }
serde = { version = "1", features = ["derive"] }
tectonic = { path = "/p/tex/tectonic" }
tectonic_bridge_core = { path = "/p/tex/tectonic/crates/bridge_core" }
tectonic_bridge_harfbuzz = { path = "/p/tex/tectonic/crates/bridge_harfbuzz" }
tectonic_engine_spx2html = { path = "/p/tex/tectonic/crates/engine_spx2html" }
tectonic_errors = "0.2"
tectonic_status_base = { path = "/p/tex/tectonic/crates/status_base" }
tokio = { version = "1.47.1", features = [
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
    "tracing",
] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
toml = "^0.9"
tower-http = { version = "0.6.1", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
